<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="SinglePlayer">


    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004">

        <TextView
            android:id="@+id/text_view_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/player_0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_view_computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_player"
            android:freezesText="true"
            android:text="@string/computer_0"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_reset2"
            android:layout_width="99dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="113dp"
            android:layout_marginRight="33dp"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/baseline_reset_alt_24"
            android:text="@string/reset" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="99dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="33dp"
            android:background="@drawable/rounded_button"
            android:drawableLeft="@drawable/baseline_arrow_back_24"
            android:text="@string/back" />
    </RelativeLayout>

    <GridLayout
        android:id="@+id/singlePlayerBoard"
        android:layout_width="330dp"
        android:layout_height="510dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout6"
        app:layout_constraintVertical_bias="0.5">

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

